Fixed footer spacing

--- a/styles.css
+++ b/styles.css
@@ -763,6 +763,7 @@ main {
   font-size: 0.9rem;
   color: rgb(190, 190, 190);
   max-width: 1500px;
+  margin: 0 auto;
   padding: 0 clamp(30px, 5vw, 50px);
   box-sizing: border-box;   
 }
